Support query/register/unregister I2C sensor APIs

--- a/webapp/src/ionicapp/www/templates/configureDevice.html
+++ b/webapp/src/ionicapp/www/templates/configureDevice.html
@@ -27,7 +27,7 @@
     <button id="configureDevice-button20" ng-click="submitUART()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">UART</button>
     <button id="configureDevice-button52" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">GPIO</button>
     <div class="spacer" style="width: 300px; height: 7px;"></div>
-    <button id="configureDevice-button18" ng-click="submitGPIO()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
+    <button id="configureDevice-button18" ng-click="submitI2C()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:18px;" class="button button-dark button-large button-outline widget_button">I2C</button>
     <button id="configureDevice-button22" ng-click="submitNotifications()" ng-disabled="data.devicestatus==&quot;Detecting...&quot;" style="font-size:14px;text-align:left;" class="button button-assertive button-large icon-right ion-android-notifications widget_button">Notification</button>
     <div class="spacer" style="height: 5px;"></div>
   </ion-content>
