--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -27,9 +27,10 @@
         <input type="text" placeholder="" ng-model="data.timestamp" readonly="">
       </label>
     </form>
+    <button id="viewDevice-button21" ng-click="getDevice()" class="button button-energized button-block">Query Device</button>
     <button id="viewDevice-button56" ng-click="setDevice(&quot;restart&quot;)" class="button button-positive button-block">Restart Device</button>
-    <button id="viewDevice-button64" ng-click="setDevice(&quot;stop&quot;)" class="button button-balanced button-block">Start Device</button>
-    <button id="viewDevice-button57" ng-click="setDevice(&quot;start&quot;)" class="button button-assertive button-block">Stop Device</button>
+    <button id="viewDevice-button64" ng-click="setDevice(&quot;start&quot;)" class="button button-balanced button-block">Start Device</button>
+    <button id="viewDevice-button57" ng-click="setDevice(&quot;stop&quot;)" class="button button-assertive button-block">Stop Device</button>
     <button id="viewDevice-button46" ng-click="configureDevice()" class="button button-dark button-block">Configure Device</button>
   </ion-content>
 </ion-view>
